Removing dead variable & Improper Constructors